Implement singleton to trace current user.

--- a/SurRound/View/Base.lproj/Home.storyboard
+++ b/SurRound/View/Base.lproj/Home.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="hZq-mO-aKz">
             <objects>
-                <viewController id="T9V-En-WM8" sceneMemberID="viewController">
+                <viewController id="T9V-En-WM8" customClass="HomeViewController" customModule="SurRound" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="XRS-Rl-U8U">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
