--- a/SurRound/View/Base.lproj/Auth.storyboard
+++ b/SurRound/View/Base.lproj/Auth.storyboard
@@ -48,7 +48,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zdE-mI-tIl" customClass="SRRoundedTextField" customModule="SurRound" customModuleProvider="target">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zdE-mI-tIl" customClass="SRRoundedTextField" customModule="SurRound" customModuleProvider="target">
                                 <rect key="frame" x="80" y="308" width="254" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="aSY-Yo-cNW"/>
@@ -56,7 +56,7 @@
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ezl-GM-VDF" customClass="SRRoundedTextField" customModule="SurRound" customModuleProvider="target">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ezl-GM-VDF" customClass="SRRoundedTextField" customModule="SurRound" customModuleProvider="target">
                                 <rect key="frame" x="80" y="358" width="254" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="Ck4-zx-Qr7"/>
@@ -104,8 +104,24 @@
                                     <action selector="didTapSignInAsGuest:" destination="QgZ-3P-hBg" eventType="touchUpInside" id="BVL-A5-ohP"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="envelope.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="nxJ-vQ-pL8">
+                                <rect key="frame" x="42" y="311.5" width="30" height="26.5"/>
+                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="nxJ-vQ-pL8" secondAttribute="height" id="BGi-LK-XbU"/>
+                                    <constraint firstAttribute="width" constant="30" id="t6l-jN-ccH"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lock.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="BeJ-P9-xu0">
+                                <rect key="frame" x="42" y="360.5" width="30" height="28.5"/>
+                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="IT1-io-GLk"/>
+                                    <constraint firstAttribute="width" secondItem="BeJ-P9-xu0" secondAttribute="height" id="Rlw-7u-4dj"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.8901960784313725" green="0.96470588235294119" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="Vgu-sA-SaF" firstAttribute="top" secondItem="R9F-YV-fCW" secondAttribute="bottom" constant="24" id="0Lk-Ht-D1u"/>
                             <constraint firstItem="gt4-sW-53A" firstAttribute="centerX" secondItem="3gF-NB-2u1" secondAttribute="centerX" id="0RN-pp-hoN"/>
@@ -114,13 +130,17 @@
                             <constraint firstItem="aZh-lO-fvw" firstAttribute="centerX" secondItem="3gF-NB-2u1" secondAttribute="centerX" id="AAJ-PK-sq1"/>
                             <constraint firstItem="zdE-mI-tIl" firstAttribute="trailing" secondItem="ezl-GM-VDF" secondAttribute="trailing" id="Epk-78-L59"/>
                             <constraint firstItem="ezl-GM-VDF" firstAttribute="leading" secondItem="KF9-6y-uCm" secondAttribute="leading" constant="80" id="J9h-Gq-3sR"/>
+                            <constraint firstItem="zdE-mI-tIl" firstAttribute="leading" secondItem="nxJ-vQ-pL8" secondAttribute="trailing" constant="8" id="LzR-Zw-EfF"/>
+                            <constraint firstItem="BeJ-P9-xu0" firstAttribute="centerY" secondItem="ezl-GM-VDF" secondAttribute="centerY" id="Qyf-0G-hUt"/>
                             <constraint firstItem="zdE-mI-tIl" firstAttribute="leading" secondItem="ezl-GM-VDF" secondAttribute="leading" id="RcR-Mu-xBt"/>
                             <constraint firstItem="nrk-ja-kdX" firstAttribute="centerX" secondItem="3gF-NB-2u1" secondAttribute="centerX" id="Z9T-oa-c6I"/>
+                            <constraint firstItem="ezl-GM-VDF" firstAttribute="leading" secondItem="BeJ-P9-xu0" secondAttribute="trailing" constant="8" id="dvN-Sg-eT3"/>
                             <constraint firstItem="Vgu-sA-SaF" firstAttribute="centerX" secondItem="3gF-NB-2u1" secondAttribute="centerX" id="eDB-Gn-ZsJ"/>
                             <constraint firstItem="R9F-YV-fCW" firstAttribute="top" secondItem="nrk-ja-kdX" secondAttribute="bottom" constant="40" id="fpb-0U-SWS"/>
                             <constraint firstItem="aZh-lO-fvw" firstAttribute="top" secondItem="Vgu-sA-SaF" secondAttribute="bottom" constant="16" id="iVZ-01-gWK"/>
                             <constraint firstItem="KF9-6y-uCm" firstAttribute="trailing" secondItem="ezl-GM-VDF" secondAttribute="trailing" constant="80" id="jmC-hC-l9F"/>
                             <constraint firstItem="R9F-YV-fCW" firstAttribute="centerX" secondItem="3gF-NB-2u1" secondAttribute="centerX" id="mRg-lt-1n6"/>
+                            <constraint firstItem="nxJ-vQ-pL8" firstAttribute="centerY" secondItem="zdE-mI-tIl" secondAttribute="centerY" id="s1R-8k-ejo"/>
                             <constraint firstItem="ezl-GM-VDF" firstAttribute="top" secondItem="zdE-mI-tIl" secondAttribute="bottom" constant="16" id="tFL-2q-LaR"/>
                             <constraint firstItem="ezl-GM-VDF" firstAttribute="centerY" secondItem="KF9-6y-uCm" secondAttribute="centerY" constant="-100" id="yZZ-tp-k8Z"/>
                         </constraints>
@@ -146,7 +166,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h8D-VC-kys" customClass="SRRoundedTextField" customModule="SurRound" customModuleProvider="target">
-                                <rect key="frame" x="80" y="331" width="254" height="34"/>
+                                <rect key="frame" x="80" y="201" width="254" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="sPl-Hd-1ys"/>
                                 </constraints>
@@ -154,7 +174,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WCu-Yh-jV7" customClass="SRRoundedTextField" customModule="SurRound" customModuleProvider="target">
-                                <rect key="frame" x="80" y="381" width="254" height="34"/>
+                                <rect key="frame" x="80" y="251" width="254" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="agD-bV-bAr"/>
                                 </constraints>
@@ -162,7 +182,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gbg-W8-HNQ" customClass="SRRoundedTextField" customModule="SurRound" customModuleProvider="target">
-                                <rect key="frame" x="80" y="431" width="254" height="34"/>
+                                <rect key="frame" x="80" y="301" width="254" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="ccM-iZ-oqQ"/>
                                 </constraints>
@@ -170,7 +190,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="prw-ZG-J9l" customClass="SRRoundedTextField" customModule="SurRound" customModuleProvider="target">
-                                <rect key="frame" x="80" y="481" width="254" height="34"/>
+                                <rect key="frame" x="80" y="351" width="254" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="caG-8U-QXZ"/>
                                 </constraints>
@@ -178,7 +198,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Raj-7U-7hH">
-                                <rect key="frame" x="175.5" y="561.5" width="63" height="33"/>
+                                <rect key="frame" x="175.5" y="431.5" width="63" height="33"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <state key="normal" title="Sign Up"/>
                                 <connections>
@@ -186,16 +206,16 @@
                                 </connections>
                             </button>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="error label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xVU-cY-1gb">
-                                <rect key="frame" x="178" y="531" width="58" height="14.5"/>
+                                <rect key="frame" x="178" y="401" width="58" height="14.5"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                 <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.8901960784313725" green="0.96470588235294119" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="xVU-cY-1gb" firstAttribute="centerX" secondItem="mDo-fb-WAL" secondAttribute="centerX" id="4W1-oV-hVl"/>
-                            <constraint firstItem="gbg-W8-HNQ" firstAttribute="centerY" secondItem="mDo-fb-WAL" secondAttribute="centerY" id="LWX-4w-T8T"/>
+                            <constraint firstItem="Raj-7U-7hH" firstAttribute="centerY" secondItem="mDo-fb-WAL" secondAttribute="centerY" id="FWf-GB-Jf8"/>
                             <constraint firstItem="xVU-cY-1gb" firstAttribute="top" secondItem="prw-ZG-J9l" secondAttribute="bottom" constant="16" id="Mde-Io-B1G"/>
                             <constraint firstItem="h8D-VC-kys" firstAttribute="leading" secondItem="WCu-Yh-jV7" secondAttribute="leading" id="N0o-hq-pK9"/>
                             <constraint firstItem="prw-ZG-J9l" firstAttribute="top" secondItem="gbg-W8-HNQ" secondAttribute="bottom" constant="16" id="Q3v-53-WMF"/>
@@ -246,4 +266,8 @@
             <point key="canvasLocation" x="186.95652173913044" y="-360.26785714285711"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="envelope.fill" catalog="system" width="64" height="46"/>
+        <image name="lock.fill" catalog="system" width="64" height="64"/>
+    </resources>
 </document>
