--- a/SurRound/View/Create/UserInfoSectionHeader.xib
+++ b/SurRound/View/Create/UserInfoSectionHeader.xib
@@ -12,30 +12,36 @@
         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iN0-l3-epB" customClass="UserInfoSectionHeader" customModule="SurRound" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="252" verticalHuggingPriority="252" translatesAutoresizingMaskIntoConstraints="NO" id="qi4-Tq-Zgf">
-                    <rect key="frame" x="16" y="8" width="36" height="36"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="252" verticalHuggingPriority="252" image="Icons_Avatar" translatesAutoresizingMaskIntoConstraints="NO" id="qi4-Tq-Zgf">
+                    <rect key="frame" x="16" y="16" width="36" height="36"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="36" id="DPk-I3-MHD"/>
                         <constraint firstAttribute="width" secondItem="qi4-Tq-Zgf" secondAttribute="height" id="i6H-4C-yhH"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SPE-T3-IVp">
-                    <rect key="frame" x="68" y="15.666666666666664" width="338" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AppWorks School" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SPE-T3-IVp">
+                    <rect key="frame" x="68" y="23.666666666666671" width="338" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="SPE-T3-IVp" firstAttribute="centerY" secondItem="qi4-Tq-Zgf" secondAttribute="centerY" id="WdC-R1-yuj"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="SPE-T3-IVp" secondAttribute="trailing" constant="8" id="amg-g3-qez"/>
                 <constraint firstItem="SPE-T3-IVp" firstAttribute="leading" secondItem="qi4-Tq-Zgf" secondAttribute="trailing" constant="16" id="mdK-rp-wxt"/>
-                <constraint firstItem="qi4-Tq-Zgf" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" id="mrQ-m2-L4p"/>
+                <constraint firstItem="qi4-Tq-Zgf" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="16" id="mrQ-m2-L4p"/>
                 <constraint firstItem="qi4-Tq-Zgf" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="rpn-0n-t5X"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <connections>
+                <outlet property="userImgView" destination="qi4-Tq-Zgf" id="iWy-jJ-QQ5"/>
+                <outlet property="userLabel" destination="SPE-T3-IVp" id="wnL-bD-0id"/>
+            </connections>
             <point key="canvasLocation" x="139" y="142"/>
         </view>
     </objects>
+    <resources>
+        <image name="Icons_Avatar" width="32" height="32"/>
+    </resources>
 </document>
