--- a/SurRound/View/Create/NewPostMediaCell.xib
+++ b/SurRound/View/Create/NewPostMediaCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="384" height="151"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image_Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="ANe-2u-QC4">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image_Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="ANe-2u-QC4">
                         <rect key="frame" x="16" y="46" width="97" height="97"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="ANe-2u-QC4" secondAttribute="height" id="2AB-mc-q1f"/>
@@ -53,8 +53,8 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="contentImgView" destination="ANe-2u-QC4" id="nVS-16-a5b"/>
                 <outlet property="deleteBtn" destination="Ovf-PX-nHq" id="s9a-D9-XX3"/>
-                <outlet property="imgView" destination="ANe-2u-QC4" id="nVS-16-a5b"/>
             </connections>
             <point key="canvasLocation" x="27.536231884057973" y="110.82589285714285"/>
         </tableViewCell>
