--- a/SurRound/View/Base.lproj/Explore.storyboard
+++ b/SurRound/View/Base.lproj/Explore.storyboard
@@ -7,17 +7,59 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Explore View Controller-->
         <scene sceneID="r0i-Xn-sNA">
             <objects>
-                <viewController id="dND-YS-7Q0" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="wgc-Qq-D7P">
+                <viewController id="dND-YS-7Q0" customClass="ExploreViewController" customModule="SurRound" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wgc-Qq-D7P" customClass="ExploreView" customModule="SurRound" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LvU-2A-6s1" customClass="SelectionView" customModule="SurRound" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="88" width="414" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="iuk-dt-dCh"/>
+                                </constraints>
+                            </view>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hkf-KG-xgF">
+                                <rect key="frame" x="0.0" y="136" width="414" height="726"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <connections>
+                                    <segue destination="VDG-fr-PYK" kind="embed" id="IoE-2T-NsH"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uhv-XD-To4">
+                                <rect key="frame" x="0.0" y="136" width="414" height="726"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <connections>
+                                    <segue destination="dCc-LZ-ZAh" kind="embed" id="LqN-V9-1wY"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mn1-FO-nDs">
+                                <rect key="frame" x="0.0" y="136" width="414" height="726"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <connections>
+                                    <segue destination="E2r-PW-aWJ" kind="embed" id="bsE-UU-oeV"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="LvU-2A-6s1" firstAttribute="leading" secondItem="uxf-yT-Pky" secondAttribute="leading" id="SX1-Mt-VlD"/>
+                            <constraint firstItem="LvU-2A-6s1" firstAttribute="trailing" secondItem="uxf-yT-Pky" secondAttribute="trailing" id="aFb-XI-Jhj"/>
+                            <constraint firstItem="LvU-2A-6s1" firstAttribute="top" secondItem="uxf-yT-Pky" secondAttribute="top" id="hwd-Vj-eui"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="uxf-yT-Pky"/>
+                        <connections>
+                            <outlet property="followingListView" destination="Hkf-KG-xgF" id="5Ez-EL-UFz"/>
+                            <outlet property="nearestListView" destination="Mn1-FO-nDs" id="Enf-tl-LCU"/>
+                            <outlet property="trendingListView" destination="uhv-XD-To4" id="Kpq-IL-NX6"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="P74-9j-jnK"/>
+                    <connections>
+                        <outlet property="selectionView" destination="LvU-2A-6s1" id="RX7-11-6Hl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rsk-tR-QBD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -40,6 +82,48 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zDN-SR-pf1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="13.043478260869566" y="34.821428571428569"/>
+        </scene>
+        <!--Trending List View Controller-->
+        <scene sceneID="LdX-fJ-633">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lMl-yB-j3f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewController id="dCc-LZ-ZAh" customClass="TrendingListViewController" customModule="SurRound" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2ac-yh-FR4">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="706"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    </view>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="923" y="727"/>
+        </scene>
+        <!--Nearest List View Controller-->
+        <scene sceneID="CBa-hH-Pd9">
+            <objects>
+                <viewController id="E2r-PW-aWJ" customClass="NearestListViewController" customModule="SurRound" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MpO-zk-Nsq">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="726"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="azf-HL-Mbc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1610" y="727"/>
+        </scene>
+        <!--Following List View Controller-->
+        <scene sceneID="OyP-T1-U8k">
+            <objects>
+                <viewController id="VDG-fr-PYK" customClass="FollowingListViewController" customModule="SurRound" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FNx-cH-03F">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="706"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hKN-cj-Ugo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="223" y="726"/>
         </scene>
     </scenes>
 </document>
